# C2EO-draft

./: .gitignore  README.md  clean.sh  test.sh
al/src/: CMakeLists.txt  funcdecl.cpp  generator.cpp  generator.h  main.cpp  stmt.h  vardecl.cpp  vardecl.h
al/src-eo-smodel/: common.h  main.cpp  object.h  readme.rst
doc/shedules/: 1st-stage-ru.rst
kam/src/: generator.cpp  main.cpp  readme.md
nchuykin/EO-Examples/: gcd.eo
nchuykin/src/: CMakeLists.txt  main.cpp  vardecl.cpp
project/: CMakeLists.txt
project/assembly/: global.eo  name.glob
project/src/transpiler/: funcdecl.cpp  generator.cpp  generator.h  main.cpp  stmt.cpp  stmt.h  vardecl.cpp
project/tests/scripts/: fun.py  global_tests.py  static_tests.py  system_vars.py  test.sh  utests.py
scripts/: clean.sh  test.sh
src/: CMakeLists.txt  analyzers.cpp  analyzers.h  matchers.cpp
src/tests/: testVarDeclInt04.c
tests/C simple programs/dz10/: Makefile  a01.out  a02.out  a03.out  a04.out  a07.out  a08.out  a09.out  func.c  func.h  task01.c  task02.c  task03.c  task04.c  task07.c  task08.c  task09.c
tests/C simple programs/dz11/: Makefile  func.c  func.h  task01.c  task02.c  task03.c  task04.c  task05.c  task06.c  task07.c  task08.c  task09.c  task10.c  task11.c
tests/C simple programs/dz12/: Makefile  a.txt  func.c  func.h  task01.c  task02.c  task03.c  task04.c  task05.c  task06.c  task07.c
tests/C simple programs/dz3/: Makefile  sort.c  sort.h  stringio.c  stringio.h  task01.c  task02.c  task03.c  task04.c  task05.c  (+4 more)
tmp/al/AST-demo-examples/libclang/c++/02-libCLangMore/: CMakeLists.txt
(+121 files in other folders)
